# xai_translate

./: .gitignore  README.md  VOICE_INPUT_SETUP.md  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android/app/src/main/kotlin/com/example/xai_translate/: MainActivity.kt  WhisperJNI.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: conversation_message.dart  llm_provider.dart  regional_preference.dart  translation_history_item.dart  translation_input.dart  translation_stats.dart  tts_voice.dart
lib/screens/: conversation_screen.dart  history_screen.dart  settings_screen.dart  stats_screen.dart  translation_screen.dart
lib/services/: backup_service.dart  history_service.dart  settings_service.dart  stats_service.dart  translation_service.dart  tts_service.dart  voice_input_service.dart  volume_service.dart  whisper_platform.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/integration/: settings_integration_test.dart
test/screens/: history_screen_test.dart  settings_screen_backup_test.dart  settings_screen_test.dart  stats_screen_test.dart  translation_screen_test.dart
test/services/: backup_service_test.dart  history_service_test.dart  plugin_initialization_test.dart  settings_service_test.dart  settings_service_test.mocks.dart  stats_service_test.dart  translation_service_test.dart  translation_service_test.mocks.dart  tts_service_test.dart  tts_service_test.mocks.dart  voice_input_service_test.dart  voice_input_service_test.mocks.dart  volume_service_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
